2012-02-26  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/gnulib/argp-fmtstream.c (__argp_get_display_len): Stop on
	\0.
	(add_length): Likewise.

2012-02-26  Vladimir Serbinenko  <phcoder@gmail.com>
2012-02-26  Lubomir Kundrak  <lkundrak@redhat.com>

	GDB serial and backtrace support.

	* grub-core/kern/i386/realmode.S (real_to_prot): Reload IDT.
	(prot_to_real): Likewise.
	* grub-core/kern/i386/int.S (grub_bios_interrupt): Remove IDT reload.
	* grub-core/Makefile.core.def (backtrace): New module.
	(gdb): Likewise.
	* grub-core/gdb/cstub.c: New file.
	* grub-core/gdb/gdb.c: Likewise.
	* grub-core/gdb/i386/idt.c: Likewise.
	* grub-core/gdb/i386/machdep.S: Likewise.
	* grub-core/gdb/i386/signal.c: Likewise.
	* grub-core/lib/i386/backtrace.c: Likewise.
	* grub-core/lib/backtrace.c: Likewise.
	* include/grub/backtrace.h: Likewise.
	* include/grub/gdb.h: Likewise.
	* include/grub/i386/gdb.h: Likewise.

2012-02-26  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/gnulib/argp-fmtstream.c (__argp_get_display_len):
	New function.
	(add_length): Likewise.
	(__argp_fmtstream_update): Handle strings with non-ASCII chars.
	* grub-core/gnulib/argp-fmtstream.h (__argp_get_display_len): New
	proto.
	* grub-core/gnulib/argp-help.c (argp_args_usage): Use
	__argp_get_display_len.

2012-02-26  Vladimir Serbinenko  <phcoder@gmail.com>

	$"..." support in scripts.

	* grub-core/script/execute.c (grub_script_arglist_to_argv): Handle
	GRUB_SCRIPT_ARG_TYPE_GETTEXT.
	* grub-core/script/yylex.l: Likewise.
	* include/grub/script_sh.h (GRUB_SCRIPT_ARG_TYPE_GETTEXT): New enum
	value.

2012-02-26  Vladimir Serbinenko  <phcoder@gmail.com>

	* gentpl.py: Remove obsolete pkglib_DATA handling.

2012-02-26  Vladimir Serbinenko  <phcoder@gmail.com>

	Don't transform PACKAGE_TARNAME following a discussion on autoconf
	mailing list.

	* util/grub-install.in: Don't transform PACKAGE_TARNAME.
	* util/grub-kbdcomp.in: Likewise.
	* util/grub-mkconfig.in: Likewise.