@@ -110,13 +110,13 @@ grub_cmd_probe (grub_extcmd_context_t ctxt, int argc, char **args)
       char *uuid;
       if (! fs->uuid)
 	return grub_error (GRUB_ERR_NOT_IMPLEMENTED_YET,
-			   "uuid for this FS isn't supported yet");
+			   N_("%s does not support UUIDs"), fs->name);
       err = fs->uuid (dev, &uuid);
       if (err)
 	return err;
       if (! uuid)
 	return grub_error (GRUB_ERR_NOT_IMPLEMENTED_YET,
-			   "uuid for this FS isn't supported yet");
+			   N_("%s does not support UUIDs"), fs->name);
 
       if (state[0].set)
 	grub_env_set (state[0].arg, uuid);
@@ -130,13 +130,15 @@ grub_cmd_probe (grub_extcmd_context_t ctxt, int argc, char **args)
       char *label;
       if (! fs->label)
 	return grub_error (GRUB_ERR_NOT_IMPLEMENTED_YET,
-			   "label for this FS isn't supported yet");
+			   N_("filesystem `%s' does not support labels"),
+			   fs->name);
       err = fs->label (dev, &label);
       if (err)
 	return err;
       if (! label)
 	return grub_error (GRUB_ERR_NOT_IMPLEMENTED_YET,
-			   "label for this FS isn't supported yet");
+			   N_("filesystem `%s' does not support labels"),
+			   fs->name);
 
       if (state[0].set)
 	grub_env_set (state[0].arg, label);
