@@ -1,5 +1,10 @@
 2012-02-26  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* grub-core/commands/probe.c (grub_cmd_probe): Gettextise UUID and label
+	errors.
+
+2012-02-26  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* grub-core/gnulib/argp-fmtstream.c (__argp_get_display_len): Stop on
 	\0.
 	(add_length): Likewise.
